--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin version="2">
-  <id>com.your.company.unique.plugin.id</id>
-  <name>Plugin display name here</name>
-  <version>1.0</version>
-  <vendor email="support@yourcompany.com" url="http://www.yourcompany.com">YourCompany</vendor>
+  <id>com.jetbrains.idea.plugin.git.multi-merge</id>
+  <name>Feature Branches Merger</name>
+  <version>0.1</version>
+  <vendor email="Kirill.Likhodedov@jetbrains.com" url="https://github.com/klikh/">Kirill Likhodedov</vendor>
 
   <depends>com.intellij.modules.platform</depends>
   <depends>Git4Idea</depends>
@@ -18,23 +18,12 @@
     ]]>
   </change-notes>
 
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="141.0"/>
-
-  <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
-       on how to target different products -->
-  <!-- uncomment to enable plugin in all products
-  <depends>com.intellij.modules.lang</depends>
-  -->
-
-  <extensions defaultExtensionNs="com.intellij">
-    <!-- Add your extensions here -->
-  </extensions>
+  <idea-version since-build="144.0"/>
 
   <actions>
     <action class="com.jetbrains.idea.git.multimerge.MultiMergeAction"
             id="git.multimerge" text="Merge Feature Branches">
-      <add-to-group group-id="Internal"/>
+      <add-to-group group-id="GitRepositoryActions"/>
     </action>
   </actions>
 
